--- a/ActorTemplate/Templates/ServiceManifest.xml
+++ b/ActorTemplate/Templates/ServiceManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ServiceManifest xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" Name="$ActorName$Pkg" Version="1.0.0" xmlns="http://schemas.microsoft.com/2011/01/fabric">
+<ServiceManifest xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" Name="$NameSpaces$Pkg" Version="1.0.0" xmlns="http://schemas.microsoft.com/2011/01/fabric">
   <ServiceTypes>
     <StatefulServiceType ServiceTypeName="$ActorName$ServiceType" HasPersistedState="true">
       <Extensions>
@@ -19,7 +19,7 @@
   <CodePackage Name="Code" Version="1.0.0">
     <EntryPoint>
       <ExeHost>
-        <Program>$ActorName$.exe</Program>
+        <Program>$NameSpaces$.exe</Program>
       </ExeHost>
     </EntryPoint>
   </CodePackage>
