--- a/ActorTemplate/Templates/ServiceManifest.xml
+++ b/ActorTemplate/Templates/ServiceManifest.xml
@@ -3,7 +3,7 @@
   <ServiceTypes>
     <StatefulServiceType ServiceTypeName="$ActorName$ServiceType" HasPersistedState="true">
       <Extensions>
-        <Extension Name="__GeneratedServiceType__" GeneratedId="$GUID$|Persisted">
+        <Extension Name="__GeneratedServiceType__" GeneratedId="$GUID$|None">
           <GeneratedNames xmlns="http://schemas.microsoft.com/2015/03/fabact-no-schema">
             <DefaultService Name="$ActorName$Service" />
             <ReplicatorEndpoint Name="$ActorName$ServiceReplicatorEndpoint" />
